--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,173 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --box-shadow:5px 5px 10px 10px rgba(101,175,10,0.5);
+  --bg-color:rgb(40,47,97)
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+  background-color: rgb(11, 26, 51);
+  color: white;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+
+/* nabar */
+.nav_bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav_bar .nav_items{
+  padding: 16px;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.nav_bar .nav_items:hover{
+  border-bottom: 2px solid yellow;
+}
+
+/* home */
+.home{
+  height: 80vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home .left{
+  background-color: var(--bg-color);
+  width: 620px;
+  text-align: center;
+  padding: 30px;
+  border-radius: 10px;
+  border: 1px solid yellow;
+  box-shadow: var(--box-shadow);
+}
+
+.home .right .img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: yellow; */
+}
+
+.home .right .img img{
+  height: 250px;
+  width: 250px;
+  border-radius: 100%;
+  border: 2px solid yellow;
+  animation-name: superman;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes superman{
+  0%{
+    border-color: blue;
+      transform: translate(0,0px);
+      box-shadow: 10px 10px 100px 50px blue;
+  }
+
+  25%{
+    border-color: rgb(239, 244, 11);
+      box-shadow: 10px 10px 100px 50px rgb(239, 244, 11);
+  }
+  50%{
+    border-color: rgb(12, 12, 199);
+      transform: translate(0,10px);
+      box-shadow: 10px 10px 100px 50px  rgb(12, 12, 199);
+  }
+  75%{
+    border-color: rgb(130, 217, 160);
+      box-shadow: 10px 10px 100px 50px  rgb(130, 217, 160);
+  }
+  100%{
+    border-color: rgb(50, 55, 205);
+      transform: translate(0,-0px);
+      box-shadow: 10px 10px 100px 50px rgb(50, 55, 205);
+  }
+}
+
+/* experience */
+.ex{
+  width: 900px;
+
+}
+.ex-items{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--bg-color);
+  margin: 20px;
+  padding: 30px;
+  width: 850px;
+  border-radius: 10px;
+  border: 1px solid yellow;
+  box-shadow: var(--box-shadow);
+}
+
+
+/* skills */
+.skills{
+  width: 900px;
+}
+
+.skills .items{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 800px;
+  margin: auto;
+}
+
+.skills .items .item{
+  width: calc(20.33%);
+  background-color: black;
+  margin: 10px;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid yellow;
+  margin: 20px;
+  box-shadow: var(--box-shadow);
+}
+
+.skills .items .item img{
+  width: 70px;
+}
+
+/* contact */
+
+.contact-icon{
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-icon .items{
+  background-color: black;
+  margin: 10px;
+  height: 70px;
+  width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  border: 2px solid yellow;
+
+}
+
+.contact-icon .items:hover{
+  background-color: var(--bg-color);
+  box-shadow: var(--box-shadow);
+}
+
+.contact-icon .items .icons{
+  font-size: 2rem;
 }
